--- a/kotlin-body.tex
+++ b/kotlin-body.tex
@@ -96,7 +96,7 @@ Si no se especifica el tipo, el compilador analiza la expresión y su inicializa
 
 Existen dos palabras reservadas para declarar una variable:
 \begin{enumerate}
-    \item \textbf{\texttt{val}} (de valor -- \emph{value}). Referencia Inmutable. Una variable declarada cn \texttt{val} no puede ser reasignada luego de ser inicializada. Corresponde a una variable final en Java.
+    \item \textbf{\texttt{val}} (de valor -- \emph{value}). Referencia Inmutable. Una variable declarada con \texttt{val} no puede ser reasignada luego de ser inicializada. Corresponde a una variable final en Java.
     \item \textbf{\texttt{var}} (de variable). Referencia mutable. El valor de una variable puede ser cambiado. Esta declaración corresponde a un variable regular (no final) en Java.
 \end{enumerate}
 
@@ -147,7 +147,7 @@ Companion object called
 
 \begin{figure}[h!]
   \includegraphics[width=11cm]{object-expression}
-  \caption{Declaracion de una función en Kotlin. Fuente \cite{kotlin-in-action}}
+  \caption{\emph{Object Expression}. Fuente \cite{kotlin-in-action}}
   \label{fig:object-expression}
 \end{figure} 
 
