--- a/kotlin-body.tex
+++ b/kotlin-body.tex
@@ -386,7 +386,7 @@ Pueden haber uno o varios bloques \texttt{catch}. Los bloques \texttt{finally} p
 %% Esta sección podria ser reemplazada por otras en donde se habla sobre clases, subclases, herencia, tipos abstractos, encapsulacimiento
 
 \subsection{Mecanismos de modularización}
-Java organiza todas las clases en paquetes. Kotlin tambien tiene el concepto de paquetes. Cada archivo Kotlin puede tener una declaración de \texttt{package} al inicio y, todas las demás declaraciones (clases, funciones y propiedades) definidas en el archivo serán colocados bajo ese paquete. Las declaraciones definidas en otros archivos puede ser usados directamente si ellos están en el mismo paquete. Si se encuentran en diferentes paquetes necesitan ser importados. Tal y como en Java las declaraciones de importación se colocan al inicio del archivo por medio de la palabra reservada \texttt{import}. En la figura \ref{fig:import-1} se muestra un ejemplo de una declaración de \texttt{package} e \texttt{import} en un archivo.
+Java organiza todas las clases en paquetes. Kotlin también tiene el concepto de paquetes. Cada archivo Kotlin puede tener una declaración de \texttt{package} al inicio y, todas las demás declaraciones (clases, funciones y propiedades) definidas en el archivo serán colocados bajo ese paquete. Las declaraciones definidas en otros archivos puede ser usados directamente si ellos están en el mismo paquete. Si se encuentran en diferentes paquetes necesitan ser importados. Tal y como en Java las declaraciones de importación se colocan al inicio del archivo por medio de la palabra reservada \texttt{import}. En la figura \ref{fig:import-1} se muestra un ejemplo de una declaración de \texttt{package} e \texttt{import} en un archivo.
 
 \begin{figure}[h!]
   \includegraphics[width=12cm]{import-1}
