--- a/kotlin-body.tex
+++ b/kotlin-body.tex
@@ -622,10 +622,10 @@ Otra de las ventajas que tiene Kotlin tanto como lenguaje y plataforma es su ver
 
 \paragraph{¿Quiénes usan Kotlin?} Se ha reportado que compañías tales como Google, Amazon, Netflix, Pinterest, Uber, Foursquare, Trello, Capital One, Coursera, Basecamp, Corda, JetBrains, Pivotal, Evernote, entre otros usan Kotlin para el desarrollo de sus aplicaciones.
 
-\subsection{Pecularidades}
+%\subsection{Pecularidades}
 %% expresiones regulares, concurrencia, concordancia de patrones, retroceso
 
-\section{Ejemplos}
+%\section{Ejemplos}
 
 \section{Análisis y conclusiones}
 
