--- a/kotlin-body.tex
+++ b/kotlin-body.tex
@@ -628,6 +628,11 @@ Otra de las ventajas que tiene Kotlin tanto como lenguaje y plataforma es su ver
 %\section{Ejemplos}
 
 \section{Análisis y conclusiones}
+Gracias a su interoperatilidad con Java y al agrupar muchas otras ideas de otros lenguajes de programación populares, Kotlin se está convirtiendo en una alternativa mucho más seria para el desarrollo de software. El hecho que haya sido adoptado por Android como uno de sus lenguajes de programación oficiales fue quizás el momento en donde empezó a llamar la atención dentro de las comunidades de programadores alrededor del mundo. Llama también la atención el esfuerzo que se ha hecho para poner a disposición este lenguaje para múltiples propósitos y plataformas: desde aplicaciones del lado del servidor hasta sistemas embebidos o móviles.
+
+Kotlin es aún un lenguaje ``joven'' y que aún muestra depedencia con el entorno Java, por ejemplo, aún no proporciona librerías para manejo de fechas cosa que en otros lenguajes se podría consideras como una característica básica. Se espera que el lenguaje siga creciendo y nuevas funcionalidades sean agregadas.
+
+ 
 
 \bibliographystyle{ACM-Reference-Format}
 \begin{thebibliography}{9}
